--- a/RepositoryParser/RepositoryParser/View/ChartOfChangesView.xaml
+++ b/RepositoryParser/RepositoryParser/View/ChartOfChangesView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RepositoryParser.View.ChartOfChangesView"
+﻿<controls:MetroWindow x:Class="RepositoryParser.View.ChartOfChangesView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,11 +6,12 @@
         xmlns:local="clr-namespace:RepositoryParser.View"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
          Title="{x:Static resw:Resources.ChartOfChangesView}" Height="600" Width="600"
         DataContext="{Binding Source={StaticResource Locator}, Path=ChartOfChanges}"
         ResizeMode="NoResize"
-        Icon="../Assets/Icons/Ratings Filled-50.png"
+        Icon="../Assets/Icons/Chart_Icon_Main.png"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -68,4 +69,5 @@
         </TabControl>
         
     </Grid>
-</Window>
+</controls:MetroWindow>
+
