--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RepositoryParser.View.DifferenceWindowView"
+﻿<controls:MetroWindow x:Class="RepositoryParser.View.DifferenceWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,7 +12,7 @@
         mc:Ignorable="d"
          Title="{x:Static resw:Resources.DiffView}" Height="600" Width="900"
         DataContext="{Binding Source={StaticResource Locator}, Path=Difference}"
-        Icon="../Assets/Icons/Ratings Filled-50.png" 
+        Icon="../Assets/Icons/Chart_Icon_Main.png" 
         >
 
     <Window.Resources>
@@ -221,4 +221,4 @@
             <TextBlock Text="{x:Static resw:Resources.DataLoadingStatus}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource BoolToVisibilityConverter}}"/>
         </StackPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
