--- a/RepositoryParser/RepositoryParser/View/HourActivityView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RepositoryParser.View.HourActivityView"
+﻿<controls:MetroWindow x:Class="RepositoryParser.View.HourActivityView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,10 +6,11 @@
         xmlns:local="clr-namespace:RepositoryParser.View"
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
          Title="{x:Static resw:Resources.HourActivityView}" Height="600" Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=HourActivity}"
-        Icon="../Assets/Icons/Ratings Filled-50.png"
+        Icon="../Assets/Icons/Chart_Icon_Main.png"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -81,4 +82,5 @@
             </Button>
         </DockPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
+
