--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RepositoryParser.MainWindow"
+﻿<Controls:MetroWindow x:Class="RepositoryParser.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,7 +9,7 @@
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         mc:Ignorable="d"
         Title="{x:Static resw:Resources.MainWindowView}" Height="600" Width="1200"
-        Icon="../Assets/Icons/Ratings Filled-50.png"
+        Icon="../Assets/Icons/Chart_Icon_Main.png"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
         DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         MinHeight="450" MinWidth="800"
@@ -34,7 +34,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
-            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="1.5*" MinHeight="120"/>
             <RowDefinition Height="5*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="5"/>
@@ -44,7 +44,6 @@
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF52802B" Offset="0" />
-                    <GradientStop Color="Green" Offset="1" />
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
@@ -70,16 +69,19 @@
                      />
             <Button x:Name="PicFileBtn" 
                     HorizontalAlignment="Center" 
-                    Content="{x:Static resw:Resources.LocalAdress}" 
                     Command="{Binding PickFileCommand}" 
-                    FontSize="14" 
-                    BorderThickness="0,2"
-                    BorderBrush="{StaticResource MyGreen}"
+                    FontSize="14"
                     Foreground="{StaticResource Grey}"
                     Background="{StaticResource Graphite}"
                     Padding="4"
                     FontWeight="Light"
-                    />
+                    MinHeight="40"
+                    >
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../Assets/Icons/Add File-100.png" Height="24" Width="24"/>
+                    <TextBlock Text="{x:Static resw:Resources.LocalAdress}"  VerticalAlignment="Center" Padding="5,0"/>
+                </StackPanel>
+            </Button>
         </StackPanel>
 
         <Grid Grid.Row="2" Grid.Column="1">
@@ -95,13 +97,13 @@
                     <Button Margin="4,0" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" MinWidth="90" Command="{Binding PickGitRepositoryCommand}">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="../Assets/Icons/Git-64.png" Height="32" Width="32"/>
-                            <TextBlock Text="{x:Static resw:Resources.GitRepository}" VerticalAlignment="Center" Padding="5,0"/>
+                            <TextBlock Text="{x:Static resw:Resources.GitRepository}" VerticalAlignment="Center" Padding="5,0" FontSize="13" FontWeight="Light"/>
                         </StackPanel>
                     </Button>
                     <Button Margin="4,0" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" MinWidth="90" Command="{Binding PickSvnRepositoryCommand}">
                         <StackPanel Orientation="Horizontal">
                             <Image Source="../Assets/Icons/svn-64.ico" Height="32" Width="32"/>
-                                <TextBlock Text="{x:Static resw:Resources.SvnRepository}" VerticalAlignment="Center" Padding="5,0"/>
+                                <TextBlock Text="{x:Static resw:Resources.SvnRepository}" VerticalAlignment="Center" Padding="5,0" FontSize="13" FontWeight="Light"/>
                         </StackPanel>
                     </Button>
                 </StackPanel>
@@ -200,7 +202,7 @@
                     Margin="0,0,0,5">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=GoToAnalisysBtn, Path=ActualWidth}" >
                     <Image Source="../Assets/Icons/Analysis_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" VerticalAlignment="Center"/>
+                    <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" VerticalAlignment="Center" FontSize="13"/>
                 </StackPanel>
             </Button>
 
@@ -217,7 +219,7 @@
                     Margin="0,0,0,5">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=ClearDataBase, Path=ActualWidth}" >
                     <Image Source="../Assets/Icons/Delete_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.ClearDBButton}" VerticalAlignment="Center"/>
+                    <TextBlock Text="{x:Static resw:Resources.ClearDBButton}" VerticalAlignment="Center" FontSize="13"/>
                 </StackPanel>
             </Button>
             <Button x:Name="RefreshBtn" 
@@ -232,7 +234,7 @@
                     >
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=RefreshBtn, Path=ActualWidth}" >
                         <Image Source="../Assets/Icons/Refresh_grey.png" Width="24" Margin="10,0,10,0"/>
-                        <TextBlock Text="{x:Static resw:Resources.RefreshButton}" VerticalAlignment="Center"/>
+                    <TextBlock Text="{x:Static resw:Resources.RefreshButton}" VerticalAlignment="Center" FontSize="13"/>
                     </StackPanel>
             </Button>
                     
@@ -246,7 +248,7 @@
                     Margin="0,0,0,5">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=Save, Path=ActualWidth}" >
                     <Image Source="../Assets/Icons/Export_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center"/>
+                    <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center" FontSize="13"/>
                 </StackPanel>
             </Button>
         </StackPanel>
@@ -281,4 +283,4 @@
             <TextBlock Text="{x:Static resw:Resources.ClearingDataBase}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource NegativeBoolToVisibilityConventer}}"/>
         </StackPanel>
     </Grid>
-</Window>
+</Controls:MetroWindow>
