--- a/RepositoryParser/RepositoryParser/View/UsersCodeFrequencyView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersCodeFrequencyView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RepositoryParser.View.UsersCodeFrequencyView"
+﻿<controls:MetroWindow x:Class="RepositoryParser.View.UsersCodeFrequencyView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,7 +14,7 @@
         Height="600" 
         Width="800"
         DataContext="{Binding Source={StaticResource Locator}, Path=UsersCodeFrequency}"
-        Icon="../Assets/Icons/Statistics_Filled-50.png"
+        Icon="../Assets/Icons/Chart_Icon_Main.png"
         >
     <Window.Resources>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
@@ -166,4 +166,4 @@
             </Button>
         </DockPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
