--- a/RepositoryParser/RepositoryParser/View/HourActivityView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityView.xaml
@@ -52,18 +52,19 @@
                 </chartingToolkit:Chart>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.HoursActivityChartList}">
-                <ListView ItemsSource="{Binding KeyCollection}" Foreground="Black">
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Width="120" DisplayMemberBinding="{Binding Key}">
-                                <GridViewColumnHeader Content="{x:Static resw:Resources.Hour}" Background="{StaticResource MyGreen}" Foreground="Black" HorizontalAlignment="Stretch"/>
-                            </GridViewColumn>
-                            <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Value}">
-                                <GridViewColumnHeader Content="{x:Static resw:Resources.CountOfCommits}" Background="{StaticResource MyGreen}" Foreground="Black" HorizontalAlignment="Stretch"/>
-                            </GridViewColumn>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+                <DataGrid Grid.Row="1" Grid.Column="0"
+                      ItemsSource="{Binding KeyCollection}"
+                      CanUserSortColumns="True"
+                      AlternatingRowBackground="{StaticResource MyRowColor}" AlternationCount="2"
+                      AutoGenerateColumns="False"
+                      ColumnWidth="auto"
+                      >
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Hour}"/>
+                        <DataGridTextColumn Binding="{Binding Value}" Header="{x:Static resw:Resources.CountOfCommits}"/>
+                    </DataGrid.Columns>
+
+                </DataGrid>
             </TabItem>
         </TabControl>
         <DockPanel Grid.Column="0" Grid.Row="2">
