--- a/RepositoryParser/RepositoryParser/Resources/Themes/CustomTheme.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/CustomTheme.xaml
@@ -10,11 +10,11 @@
     <!--80%-->
     <Color x:Key="AccentColor">#424242</Color>
     <!--60%-->
-    <Color x:Key="AccentColor2">#6bbc7d</Color>
+    <Color x:Key="AccentColor2">#749955</Color>
     <!--40%-->
-    <Color x:Key="AccentColor3">#424242</Color>
+    <Color x:Key="AccentColor3">#8D8D8D</Color>
     <!--20%-->
-    <Color x:Key="AccentColor4">#6bbc7d</Color>
+    <Color x:Key="AccentColor4">#B9CCAA</Color>
 
     <!-- re-set brushes too -->
     <SolidColorBrush x:Key="HighlightBrush" Color="{StaticResource HighlightColor}" options:Freeze="True" />
