--- a/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityChart.xaml
@@ -26,7 +26,6 @@
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF52802B" Offset="0" />
-                    <GradientStop Color="Green" Offset="1" />
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
@@ -34,7 +33,7 @@
 
         <Label Grid.Row="0" x:Name="WelcomeLabel" Content="{x:Static resw:Resources.MonthActivityWindowTitle}" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TabControl Grid.Column="0" Grid.Row="1">
-            <TabItem Header="{x:Static resw:Resources.MonthActivityChartChart}">
+            <TabItem Header="{x:Static resw:Resources.Chart}">
                 <chartingToolkit:Chart Title="{x:Static resw:Resources.MonthActivityChartChart}" Background="{StaticResource Grey}">
                     <chartingToolkit:Chart.LegendStyle>
                         <Style TargetType="Control">
@@ -52,7 +51,7 @@
                     
                 </chartingToolkit:Chart>
             </TabItem>
-            <TabItem Header="{x:Static resw:Resources.MonthActivityChartList}">
+            <TabItem Header="{x:Static resw:Resources.List}">
                 <DataGrid Grid.Row="1" Grid.Column="0"
                       ItemsSource="{Binding KeyCollection}"
                       CanUserSortColumns="True"
