--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
@@ -1,39 +1,33 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.ChartWindowView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RepositoryParser.View"
-        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
-        xmlns:resw="clr-namespace:RepositoryParser.Properties"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        mc:Ignorable="d"
-        Title="{x:Static resw:Resources.UserActivityView}" Height="600" Width="800"
-        DataContext="{Binding Source={StaticResource Locator}, Path=Chart}"
-        Icon="../Assets/Icons/Chart_Icon_Main.png"
-        >
+﻿<UserControl x:Class="RepositoryParser.View.UsersActivityViews.UserActivityChartView"
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                xmlns:local="clr-namespace:RepositoryParser.View.UsersActivityViews"
+                xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+                xmlns:resw="clr-namespace:RepositoryParser.Properties"
+                mc:Ignorable="d" 
+                d:DesignHeight="600" d:DesignWidth="600"
+                DataContext="{Binding Source={StaticResource Locator}, Path=Chart}"
+                >
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" MinHeight="60"/>
-            <RowDefinition Height="9*"/>
+            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
 
-        <Rectangle Grid.ColumnSpan="1000" Grid.Row="0">
-            <Rectangle.Fill>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF52802B" Offset="0" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Label Grid.Row="0" Content="{x:Static resw:Resources.ChartWindowTitle}" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        
-        
-        <TabControl Grid.Row="1">
+        <Border Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Background="{StaticResource Graphite}">
+            <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CoutOfCommitsAnalyse}" HorizontalAlignment="Center"/>
+        </Border>
+
+        <TabControl Grid.Row="1" Grid.Column="1">
             <TabItem Header="{x:Static resw:Resources.Chart}">
                 <chartingToolkit:Chart x:Name="Chart" 
                                        Title="{x:Static resw:Resources.ActivityChart}" 
@@ -66,22 +60,21 @@
             </TabItem>
         </TabControl>
 
-        <DockPanel Grid.Column="0" Grid.Row="2">
+        <DockPanel Grid.Column="1" Grid.Row="2">
             <Button x:Name="SaveFileBtn" 
-                    Background="{StaticResource MyGreen}"  
-                    Margin="15,5" 
                     HorizontalAlignment="Left"
-                    Padding="5,0"
-                    MaxHeight="50"
+                    Style="{StaticResource AppGraphiteButton}"
+                    Height="35"
                     Command="{Binding ExportFileCommand}"
+                    Padding="0,0,10,0"
                     >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=SaveFileBtn, Path=Width}" >
-                    <Image Source="../Assets/Icons/CSV Filled-50.png" Width="24" Margin="10,0,10,0"/>
+                    <Image Source="../../Assets/Icons/CSV Filled-50.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
         </DockPanel>
-
+        
+        <Border Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="1" Background="{StaticResource MyGreen}"/>
     </Grid>
-</controls:MetroWindow>
-
+</UserControl>
